fixed layout issues

--- a/style.scss
+++ b/style.scss
@@ -326,6 +326,14 @@ footer {
   margin-left: 1em;
 }
 
+.sponsorpic {
+  float: left;
+  max-width: 200px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-right: 1em;
+}
+
 .orgapic {
   float: right;
   width: 100px;
